# git-haskell-org-hooks

./: .gitignore  README.md  git-haskell-org-hooks.cabal
src/: Common.hs  validate-commit-msg.hs  validate-submod-refs.hs  validate-whitespace.hs
update.secondary.d/: check-commit-msg  check-submodule-refs  check-whitespace
