name:                git-haskell-org-hooks
version:             0.1.0.0
synopsis:            Git server-side hook scripts
license:             GPL-3
license-file:        LICENSE
author:              Herbert Valerio Riedel
maintainer:          hvr@gnu.org
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable submodchecker
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             validate-submod-refs.hs
  other-modules: Common

  build-depends:
    base    >=4.5  && <4.9,
    deepseq >=1.1  && <1.5,
    shelly  >=1.5  && <1.6,
    text    >=0.11 && <1.3

  ghc-options: -Wall


executable validate-commit-msg
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             validate-commit-msg.hs

  build-depends:
    base    >=4.5  && <4.9,
    deepseq >=1.1  && <1.5,
    mtl     >=2.1  && <2.3,
    shelly  >=1.5  && <1.6,
    text    >=0.11 && <1.3

  ghc-options: -Wall
